add data atributes for gallery images

--- a/src/index.html
+++ b/src/index.html
@@ -447,6 +447,7 @@
                     >
                     <button
                       type="button"
+                      data-index="0"
                       class="gallery__button gallery__button--active js-gallery-button"
                     >
                       Kyiv
@@ -463,6 +464,7 @@
                     >
                     <button
                       type="button"
+                      data-index="1"
                       class="gallery__button js-gallery-button"
                     >
                       Barcelona
@@ -479,6 +481,7 @@
                     <img
                       src="./images/whereToFind/kyiv/1.png"
                       alt="Kyiv"
+                      data-index="0"
                       loading="lazy"
                       class="gallery__photo gallery__photo--show js-gallery-photo"
                     >
@@ -486,6 +489,7 @@
                     <img
                       src="./images/whereToFind/barcelona/1.png"
                       alt="Barcelona"
+                      data-index="1"
                       loading="lazy"
                       class="gallery__photo js-gallery-photo"
                     >
@@ -501,6 +505,7 @@
                         <img
                           src="./images/whereToFind/kyiv/2.png"
                           alt="Kyiv"
+                          data-index="0"
                           loading="lazy"
                           class="gallery__photo gallery__photo--show js-gallery-photo"
                         >
@@ -508,6 +513,7 @@
                         <img
                           src="./images/whereToFind/barcelona/2.png"
                           alt="Barcelona"
+                          data-index="1"
                           loading="lazy"
                           class="gallery__photo js-gallery-photo"
                         >
@@ -522,6 +528,7 @@
                           <img
                             src="./images/whereToFind/kyiv/3.png"
                             alt="Kyiv"
+                            data-index="0"
                             loading="lazy"
                             class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
@@ -529,6 +536,7 @@
                           <img
                             src="./images/whereToFind/barcelona/3.png"
                             alt="Barcelona"
+                            data-index="1"
                             loading="lazy"
                             class="gallery__photo js-gallery-photo"
                           >
@@ -542,6 +550,7 @@
                           <img
                             src="./images/whereToFind/kyiv/4.png"
                             alt="Kyiv"
+                            data-index="0"
                             loading="lazy"
                             class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
@@ -549,6 +558,7 @@
                           <img
                             src="./images/whereToFind/barcelona/4.png"
                             alt="Barcelona"
+                            data-index="1"
                             loading="lazy"
                             class="gallery__photo js-gallery-photo"
                           >
