fix spaces between buttons in gallery

--- a/src/index.html
+++ b/src/index.html
@@ -438,7 +438,7 @@
           <div class="where-to-find__gallery gallery">
             <div class="gallery__controls js-scroll__element scroll">
               <div class="row justify-content-center">
-                <div class="col-6 col-lg-4 col-xl-3">
+                <div class="col-6 col-lg-4 col-xl-3 px-1 px-lg-2">
                   <div class="gallery__button-wrp">
                     <img
                       src="./images/whereToFind/kyiv/0.png"
@@ -454,7 +454,7 @@
                   </div>
                 </div>
 
-                <div class="col-6 col-lg-4 col-xl-3">
+                <div class="col-6 col-lg-4 col-xl-3 px-1 px-lg-2">
                   <div class="gallery__button-wrp">
                     <img
                       src="./images/whereToFind/barcelona/0.png"
