change values layout

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
             </p>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="what-we-value__wrapper">
             <div
               class="what-we-value__value value value--customer js-scroll__element scroll"
               data-hover="content"
@@ -208,9 +208,7 @@
                 </p>
               </div>
             </div>
-          </div>
 
-          <div class="col-6 col-xl-4">
             <div
               class="what-we-value__value value value--human js-scroll__element scroll"
               data-hover="content"
@@ -238,9 +236,7 @@
                 </p>
               </div>
             </div>
-          </div>
 
-          <div class="col-6 col-xl-4">
             <div
               class="what-we-value__value value value--hackers js-scroll__element scroll"
               data-hover="content"
@@ -268,9 +264,7 @@
                 </p>
               </div>
             </div>
-          </div>
 
-          <div class="col-6 col-xl-4">
             <div
               class="what-we-value__value value value--hungry js-scroll__element scroll"
               data-hover="content"
@@ -298,9 +292,7 @@
                 </p>
               </div>
             </div>
-          </div>
 
-          <div class="col-6 col-xl-4">
             <div
               class="what-we-value__value value value--humble js-scroll__element scroll"
               data-hover="content"
@@ -328,9 +320,7 @@
                 </p>
               </div>
             </div>
-          </div>
 
-          <div class="col-6 col-xl-4">
             <div
               class="what-we-value__value value value--curious js-scroll__element scroll"
               data-hover="content"
@@ -359,7 +349,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
