Fix js files (#89)
* fix name for js file

* fix addListenerForGalleryButtons function

* add data atributes for gallery images

--- a/src/index.html
+++ b/src/index.html
@@ -435,7 +435,7 @@
             </p>
           </div>
 
-          <div class="where-to-find__gallery gallery">
+          <div class="where-to-find__gallery gallery js-gallery">
             <div class="gallery__controls js-scroll__element scroll">
               <div class="row justify-content-center">
                 <div class="col-6 col-lg-4 col-xl-3 px-1 px-lg-2">
@@ -447,7 +447,8 @@
                     >
                     <button
                       type="button"
-                      class="gallery__button gallery__button--active"
+                      data-index="0"
+                      class="gallery__button gallery__button--active js-gallery-button"
                     >
                       Kyiv
                     </button>
@@ -463,7 +464,8 @@
                     >
                     <button
                       type="button"
-                      class="gallery__button"
+                      data-index="1"
+                      class="gallery__button js-gallery-button"
                     >
                       Barcelona
                     </button>
@@ -479,15 +481,17 @@
                     <img
                       src="./images/whereToFind/kyiv/1.png"
                       alt="Kyiv"
+                      data-index="0"
                       loading="lazy"
-                      class="gallery__photo gallery__photo--show"
+                      class="gallery__photo gallery__photo--show js-gallery-photo"
                     >
 
                     <img
                       src="./images/whereToFind/barcelona/1.png"
                       alt="Barcelona"
+                      data-index="1"
                       loading="lazy"
-                      class="gallery__photo"
+                      class="gallery__photo js-gallery-photo"
                     >
                   </div>
                 </div>
@@ -501,15 +505,17 @@
                         <img
                           src="./images/whereToFind/kyiv/2.png"
                           alt="Kyiv"
+                          data-index="0"
                           loading="lazy"
-                          class="gallery__photo gallery__photo--show"
+                          class="gallery__photo gallery__photo--show js-gallery-photo"
                         >
 
                         <img
                           src="./images/whereToFind/barcelona/2.png"
                           alt="Barcelona"
+                          data-index="1"
                           loading="lazy"
-                          class="gallery__photo"
+                          class="gallery__photo js-gallery-photo"
                         >
                       </div>
                     </div>
@@ -522,15 +528,17 @@
                           <img
                             src="./images/whereToFind/kyiv/3.png"
                             alt="Kyiv"
+                            data-index="0"
                             loading="lazy"
-                            class="gallery__photo gallery__photo--show"
+                            class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
 
                           <img
                             src="./images/whereToFind/barcelona/3.png"
                             alt="Barcelona"
+                            data-index="1"
                             loading="lazy"
-                            class="gallery__photo"
+                            class="gallery__photo js-gallery-photo"
                           >
                         </div>
                       </div>
@@ -542,15 +550,17 @@
                           <img
                             src="./images/whereToFind/kyiv/4.png"
                             alt="Kyiv"
+                            data-index="0"
                             loading="lazy"
-                            class="gallery__photo gallery__photo--show"
+                            class="gallery__photo gallery__photo--show js-gallery-photo"
                           >
 
                           <img
                             src="./images/whereToFind/barcelona/4.png"
                             alt="Barcelona"
+                            data-index="1"
                             loading="lazy"
-                            class="gallery__photo"
+                            class="gallery__photo js-gallery-photo"
                           >
                         </div>
                       </div>
