clear code in select work

--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
             </div>
           </div>
 
-          <table class="vacancies__list offset-1 col-10 js-scroll__element scroll"></table >
+          <table class="vacancies__list js-list offset-1 col-10 js-scroll__element scroll"></table>
         </div>
       </div>
     </section>
