change hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
             </div>
 
             <div
-              class="what-we-value__value value value--hackers js-scroll__element scroll"
+              class="what-we-value__value value value--hackers js-scroll__element scroll order-3"
               data-hover="content"
             >
               <div class="value__main value__main--active">
@@ -266,7 +266,7 @@
             </div>
 
             <div
-              class="what-we-value__value value value--hungry js-scroll__element scroll"
+              class="what-we-value__value value value--hungry js-scroll__element scroll order-1"
               data-hover="content"
             >
               <div class="value__main value__main--active">
@@ -294,7 +294,7 @@
             </div>
 
             <div
-              class="what-we-value__value value value--humble js-scroll__element scroll"
+              class="what-we-value__value value value--humble js-scroll__element scroll order-2"
               data-hover="content"
             >
               <div class="value__main value__main--active">
@@ -322,7 +322,7 @@
             </div>
 
             <div
-              class="what-we-value__value value value--curious js-scroll__element scroll"
+              class="what-we-value__value value value--curious js-scroll__element scroll order-4"
               data-hover="content"
             >
               <div class="value__main value__main--active">
