--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,7 @@
               class="what-we-value__value value value--customer js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">customer first</h3>
                 <img
                   class="value__image"
@@ -213,7 +213,7 @@
               class="what-we-value__value value value--human js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">human</h3>
                 <img
                   class="value__image"
@@ -241,7 +241,7 @@
               class="what-we-value__value value value--hackers js-scroll__element scroll order-3"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">hackers</h3>
                 <img
                   class="value__image"
@@ -269,7 +269,7 @@
               class="what-we-value__value value value--hungry js-scroll__element scroll order-1"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">hungry</h3>
                 <img
                   class="value__image"
@@ -297,7 +297,7 @@
               class="what-we-value__value value value--humble js-scroll__element scroll order-2"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">humble</h3>
                 <img
                   class="value__image"
@@ -325,7 +325,7 @@
               class="what-we-value__value value value--curious js-scroll__element scroll order-4"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">curious</h3>
                 <img
                   class="value__image"
