--- a/src/index.html
+++ b/src/index.html
@@ -181,171 +181,183 @@
           </div>
 
           <div class="what-we-value__wrapper">
-            <div
-              class="what-we-value__value value value--customer js-scroll__element scroll"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">customer first</h3>
-                <img
-                  class="value__image"
-                  alt="customer first"
-                  src="images/values/customer_first.svg"
-                >
-                </img>
-              </div>
+            <div class="order-1 order-lg-1">
+              <div
+                class="what-we-value__value value value--customer js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">customer first</h3>
+                  <img
+                    class="value__image"
+                    alt="customer first"
+                    src="images/values/customer_first.svg"
+                  >
+                  </img>
+                </div>
 
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Customer obsessed
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  We’re customer first and see humans behind the numbers
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="what-we-value__value value value--human js-scroll__element scroll"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">human</h3>
-                <img
-                  class="value__image"
-                  alt="human"
-                  src="images/values/human.svg"
-                >
-                </img>
-              </div>
-
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Human
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  We believe in diverse teams and candid interaction
-                </p>
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Customer obsessed
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    We’re customer first and see humans behind the numbers
+                  </p>
+                </div>
               </div>
             </div>
 
-            <div
-              class="what-we-value__value value value--hackers js-scroll__element scroll order-3"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">hackers</h3>
-                <img
-                  class="value__image"
-                  alt="hackers"
-                  src="images/values/hackers.svg"
-                >
-                </img>
-              </div>
+            <div class="order-2 order-lg-2">
+              <div
+                class="what-we-value__value value value--human js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">human</h3>
+                  <img
+                    class="value__image"
+                    alt="human"
+                    src="images/values/human.svg"
+                  >
+                  </img>
+                </div>
 
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Hackers
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  We prioritize what matters and design with pragmatism
-                </p>
-              </div>
-            </div>
-
-            <div
-              class="what-we-value__value value value--hungry js-scroll__element scroll order-1"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">hungry</h3>
-                <img
-                  class="value__image"
-                  alt="hungry"
-                  src="images/values/hungry.svg"
-                >
-                </img>
-              </div>
-
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Hungry
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  We make bold decisions, dare to dream big and think like co-owners
-                </p>
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Human
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    We believe in diverse teams and candid interaction
+                  </p>
+                </div>
               </div>
             </div>
 
-            <div
-              class="what-we-value__value value value--humble js-scroll__element scroll order-2"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">humble</h3>
-                <img
-                  class="value__image"
-                  alt="humble"
-                  src="images/values/humble.svg"
-                >
-                </img>
-              </div>
+            <div class="order-5 order-lg-3">
+              <div
+                class="what-we-value__value value value--hackers js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">hackers</h3>
+                  <img
+                    class="value__image"
+                    alt="hackers"
+                    src="images/values/hackers.svg"
+                  >
+                  </img>
+                </div>
 
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Humble
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  We keep our egos low and use user insights to make decisions
-                </p>
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Hackers
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    We prioritize what matters and design with pragmatism
+                  </p>
+                </div>
               </div>
             </div>
 
-            <div
-              class="what-we-value__value value value--curious js-scroll__element scroll order-4"
-              data-hover="content"
-            >
-              <div class="value__main">
-                <h3 class="value__title">curious</h3>
-                <img
-                  class="value__image"
-                  alt="curious"
-                  src="images/values/curious.svg"
-                >
-                </img>
-              </div>
+            <div class="order-3 order-lg-4">
+              <div
+                class="what-we-value__value value value--hungry js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">hungry</h3>
+                  <img
+                    class="value__image"
+                    alt="hungry"
+                    src="images/values/hungry.svg"
+                  >
+                  </img>
+                </div>
 
-              <div class="value__additional">
-                <h3
-                  class="value__additional--title"
-                >
-                  Curious
-                </h3>
-                <p
-                  class="value__additional--text"
-                >
-                  Our curiosity helps us view tough situations more creatively
-                </p>
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Hungry
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    We make bold decisions, dare to dream big and think like co-owners
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="order-4 order-lg-5">
+              <div
+                class="what-we-value__value value value--humble js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">humble</h3>
+                  <img
+                    class="value__image"
+                    alt="humble"
+                    src="images/values/humble.svg"
+                  >
+                  </img>
+                </div>
+
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Humble
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    We keep our egos low and use user insights to make decisions
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="order-6 order-lg-6">
+              <div
+                class="what-we-value__value value value--curious js-scroll__element scroll"
+                data-hover="content"
+              >
+                <div class="value__main">
+                  <h3 class="value__title">curious</h3>
+                  <img
+                    class="value__image"
+                    alt="curious"
+                    src="images/values/curious.svg"
+                  >
+                  </img>
+                </div>
+
+                <div class="value__additional">
+                  <h3
+                    class="value__additional--title"
+                  >
+                    Curious
+                  </h3>
+                  <p
+                    class="value__additional--text"
+                  >
+                    Our curiosity helps us view tough situations more creatively
+                  </p>
+                </div>
               </div>
             </div>
           </div>
