--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             src="./images/slogan/slogan_1.svg"
             alt="power"
             loading="lazy"
-            class="slogan__img col-xl-5 col-lg-12 js-scroll__element scroll"
+            class="slogan__img col-xl-5 col-lg-12 js-scroll__element scroll scroll__img"
           >
         </div>
       </div>
