--- a/src/index.html
+++ b/src/index.html
@@ -180,12 +180,12 @@
             </p>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-1 order-xl-1">
             <div
               class="what-we-value__value value value--customer js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">customer first</h3>
                 <img
                   class="value__image"
@@ -210,12 +210,12 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-2 order-xl-2">
             <div
               class="what-we-value__value value value--human js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">human</h3>
                 <img
                   class="value__image"
@@ -240,12 +240,12 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-5 order-xl-3">
             <div
               class="what-we-value__value value value--hackers js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">hackers</h3>
                 <img
                   class="value__image"
@@ -270,12 +270,12 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-3 order-xl-4">
             <div
               class="what-we-value__value value value--hungry js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">hungry</h3>
                 <img
                   class="value__image"
@@ -300,12 +300,12 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-4 order-xl-5">
             <div
               class="what-we-value__value value value--humble js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">humble</h3>
                 <img
                   class="value__image"
@@ -330,12 +330,12 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4">
+          <div class="col-6 col-xl-4 order-6 order-xl-6">
             <div
               class="what-we-value__value value value--curious js-scroll__element scroll"
               data-hover="content"
             >
-              <div class="value__main value__main--active">
+              <div class="value__main">
                 <h3 class="value__title">curious</h3>
                 <img
                   class="value__image"
@@ -359,7 +359,6 @@
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section>
