Btn to button class (#93)
* update z-endex && select width in vacancies

* clear code in select work

* btn to button

* apply hover transition add

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                   <h1 class="promo__title">Where your ideas create connections</h1>
                 </div>
                 <div class="js-scroll__element scroll">
-                  <a href="#vacancies" class="btn">Browse open positions</a>
+                  <a href="#vacancies" class="button">Browse open positions</a>
                 </div>
               </div>
             </div>
@@ -820,7 +820,7 @@
             <div class="js-scroll__element scroll">
               <a
                 href="#vacancies"
-                class="btn btn--light slogan__btn"
+                class="button button--light slogan__btn"
               >
                 Browse open positions
               </a>
