--- a/src/index.html
+++ b/src/index.html
@@ -909,7 +909,7 @@
         <div class="row">
           <div class="col-12 col-md-5">
             <p class="footer__copyright">
-              &#169; 2012-<span class="js-year"></span> Preply Inc.
+              &#169; 2012-<span class="js-year footer__year"></span> Preply Inc.
             </p>
           </div>
           <div class="col-12 offset-md-4 col-md-3">
