add response to values

--- a/src/index.html
+++ b/src/index.html
@@ -180,7 +180,7 @@
             </p>
           </div>
 
-          <div class="col-6 col-xl-4 order-1 order-xl-1">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-1 order-xl-1">
             <div
               class="what-we-value__value value value--customer js-scroll__element scroll"
               data-hover="content"
@@ -210,7 +210,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 order-2 order-xl-2">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-2 order-xl-2">
             <div
               class="what-we-value__value value value--human js-scroll__element scroll"
               data-hover="content"
@@ -240,7 +240,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 order-5 order-xl-3">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-5 order-xl-3">
             <div
               class="what-we-value__value value value--hackers js-scroll__element scroll"
               data-hover="content"
@@ -270,7 +270,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 order-3 order-xl-4">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-3 order-xl-4">
             <div
               class="what-we-value__value value value--hungry js-scroll__element scroll"
               data-hover="content"
@@ -300,7 +300,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 order-4 order-xl-5">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-4 order-xl-5">
             <div
               class="what-we-value__value value value--humble js-scroll__element scroll"
               data-hover="content"
@@ -330,7 +330,7 @@
             </div>
           </div>
 
-          <div class="col-6 col-xl-4 order-6 order-xl-6">
+          <div class="col-6 col-xl-4 px-1 px-lg-2 order-6 order-xl-6">
             <div
               class="what-we-value__value value value--curious js-scroll__element scroll"
               data-hover="content"
