--- a/src/index.html
+++ b/src/index.html
@@ -737,12 +737,14 @@
     <section class="in-news js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="in-news__title col-12 js-scroll__element scroll">Preply in the news</h2>
-          <p
-            class="in-news__description col-12 js-scroll__element scroll"
-          >
-            Ok, now we're just showing off...
-          </p>
+          <div class="col-12">
+            <h2 class="in-news__title js-scroll__element scroll">Preply in the news</h2>
+            <p
+              class="in-news__description js-scroll__element scroll"
+            >
+              Ok, now we're just showing off...
+            </p>
+          </div>
 
           <div class="in-news__wrapper js-scroll__element scroll">
             <div
