--- a/src/index.html
+++ b/src/index.html
@@ -580,140 +580,154 @@
     <section class="perks js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="perks__title col-12 js-scroll__element scroll">Perks and benefits</h2>
-          <p
-            class="perks__description col-12 js-scroll__element scroll"
-          >
-            A few more reasons why you’ll love working with us.
-          </p>
+          <div class="col-12">
+            <h2 class="perks__title js-scroll__element scroll">Perks and benefits</h2>
+            <p
+              class="perks__description js-scroll__element scroll"
+            >
+              A few more reasons why you’ll love working with us.
+            </p>
+          </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
-              <img
-                alt="study"
-                src="images/perks/Study.svg"
-                class="perk__image"
-              >
-              </img>
-            </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--light">
+                <img
+                  alt="study"
+                  src="images/perks/Study.svg"
+                  class="perk__image"
+                >
+                </img>
+              </div>
 
-            <div>
-              <h4 class="perk__title">
-                Language learning
-              </h4>
+              <div>
+                <h4 class="perk__title">
+                  Language learning
+                </h4>
 
-              <p class="perk__description">
-                We offer monthly credit to support your passion for learning
-              </p>
+                <p class="perk__description">
+                  We offer monthly credit to support your passion for learning
+                </p>
+              </div>
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--dark">
-              <img
-                alt="stock"
-                src="images/perks/Stock.svg"
-                class="perk__image"
-              >
-              </img>
-            </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--dark">
+                <img
+                  alt="stock"
+                  src="images/perks/Stock.svg"
+                  class="perk__image"
+                >
+                </img>
+              </div>
 
-            <div>
-              <h4 class="perk__title">
-                Stock options
-              </h4>
+              <div>
+                <h4 class="perk__title">
+                  Stock options
+                </h4>
 
-              <p class="perk__description">
-                Every team member can benefit from our growth as a company
-              </p>
-            </div>
-          </div>
-
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
-              <img
-                alt="insurance"
-                src="images/perks/Insurance.svg"
-                loading="lazy"
-                class="perk__image"
-              >
-              </img>
-            </div>
-
-            <div>
-              <h4 class="perk__title">
-                Medical insurance
-              </h4>
-
-              <p class="perk__description">
-                Preply offers a healthcare plan to support your wellbeing
-              </p>
+                <p class="perk__description">
+                  Every team member can benefit from our growth as a company
+                </p>
+              </div>
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--dark">
-              <img
-                alt="location"
-                src="images/perks/Location.svg"
-                loading="lazy"
-                class="perk__image"
-              >
-              </img>
-            </div>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--light">
+                <img
+                  alt="insurance"
+                  src="images/perks/Insurance.svg"
+                  loading="lazy"
+                  class="perk__image"
+                >
+                </img>
+              </div>
 
-            <div>
-              <h4 class="perk__title">
-                Exciting location
-              </h4>
+              <div>
+                <h4 class="perk__title">
+                  Medical insurance
+                </h4>
 
-              <p class="perk__description">
-                Our offices are in the heart of both Kyiv and Barcelona
-              </p>
-            </div>
-          </div>
-
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--light">
-              <img
-                alt="equipment"
-                src="images/perks/Equipment.svg"
-                loading="lazy"
-                class="perk__image"
-              >
-              </img>
-            </div>
-
-            <div>
-              <h4 class="perk__title">
-                New equipment
-              </h4>
-
-              <p class="perk__description">
-                You’ll receive all the equipment you need to do your best work
-              </p>
+                <p class="perk__description">
+                  Preply offers a healthcare plan to support your wellbeing
+                </p>
+              </div>
             </div>
           </div>
 
-          <div class="perks__perk perk col-12 col-md-6 col-lg-4 js-scroll__element scroll">
-            <div class="perk__image-wrapper perk__image-wrapper--dark">
-              <img
-                alt="holidays"
-                src="images/perks/Holidays.svg"
-                loading="lazy"
-                class="perk__image"
-              >
-              </img>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--dark">
+                <img
+                  alt="location"
+                  src="images/perks/Location.svg"
+                  loading="lazy"
+                  class="perk__image"
+                >
+                </img>
+              </div>
+
+              <div>
+                <h4 class="perk__title">
+                  Exciting location
+                </h4>
+
+                <p class="perk__description">
+                  Our offices are in the heart of both Kyiv and Barcelona
+                </p>
+              </div>
             </div>
+          </div>
 
-            <div>
-              <h4 class="perk__title">
-                Time off & leaves
-              </h4>
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--light">
+                <img
+                  alt="equipment"
+                  src="images/perks/Equipment.svg"
+                  loading="lazy"
+                  class="perk__image"
+                >
+                </img>
+              </div>
 
-              <p class="perk__description">
-                We offer more than 30 days of vacation and an inclusive parental leave
-              </p>
+              <div>
+                <h4 class="perk__title">
+                  New equipment
+                </h4>
+
+                <p class="perk__description">
+                  You’ll receive all the equipment you need to do your best work
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="perks__perk perk js-scroll__element scroll">
+              <div class="perk__image-wrapper perk__image-wrapper--dark">
+                <img
+                  alt="holidays"
+                  src="images/perks/Holidays.svg"
+                  loading="lazy"
+                  class="perk__image"
+                >
+                </img>
+              </div>
+
+              <div>
+                <h4 class="perk__title">
+                  Time off & leaves
+                </h4>
+
+                <p class="perk__description">
+                  We offer more than 30 days of vacation and an inclusive parental leave
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -723,12 +737,14 @@
     <section class="in-news js-scroll">
       <div class="container">
         <div class="row justify-content-center">
-          <h2 class="in-news__title col-12 js-scroll__element scroll">Preply in the news</h2>
-          <p
-            class="in-news__description col-12 js-scroll__element scroll"
-          >
-            Ok, now we're just showing off...
-          </p>
+          <div class="col-12">
+            <h2 class="in-news__title js-scroll__element scroll">Preply in the news</h2>
+            <p
+              class="in-news__description js-scroll__element scroll"
+            >
+              Ok, now we're just showing off...
+            </p>
+          </div>
 
           <div class="in-news__wrapper js-scroll__element scroll">
             <div
