--- a/src/index.html
+++ b/src/index.html
@@ -892,7 +892,7 @@
               <img src="./images/logo.png" alt="">
             </a>
           </div>
-          <div class="offset-3 offset-sm-2 col-5 offset-lg-7 col-lg-3">
+          <div class="offset-2 col-6 offset-lg-7 col-lg-3">
             <div class="footer__socials">
               <a
                 href="https://www.linkedin.com/company/preplycom/"
@@ -936,7 +936,7 @@
               </a>
               <a
                 href="https://www.youtube.com/channel/UCyDXMl-ru1F--NPCtO7aDig?feature=emb_ch_name_ex"
-                class="footer__sociall"
+                class="footer__sociall footer__sociall--youtube"
                 title="Our Youtube channel"
               >
                 <svg
