--- a/src/index.html
+++ b/src/index.html
@@ -42,25 +42,53 @@
             </div>
           </div>
           <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--big">
-            <p>Read employees review on:</p>
-            <div>
-              <img
-                src="./images/promo/glassdoor-logo.png"
-                loading="lazy"
-                alt=""
-              >
-              <img
-                src="./images/promo/glassdoor.png"
-                loading="lazy"
-                alt=""
-              >
+            <svg
+              viewBox="0 0 248 167"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                clip-rule="evenodd"
+                d="M214.935 18.6709C214.935 18.6709 156.447 -20.9036 77.2715 15.7304C77.2715 15.7304 6.58742 43.0599 0.979957 97.9767C-1.0967 118.173 3.25068 136.986 36.4059 136.568C36.7971 136.58 37.1883 136.592 37.6157 136.562C37.6157 136.562 78.3528 131.749 107.751 156.021C107.751 156.021 152.36 189.09 213.804 136.562C213.765 136.565 289.264 67.1166 214.935 18.6709Z"
+                fill-opacity="0.35"
+              ></path>
+            </svg>
+            <div class="promo__glassdoor-inner promo__glassdoor-inner--big">
+              <p>Read employees review on:</p>
+              <div>
+                <img
+                  src="./images/promo/glassdoor-logo.png"
+                  loading="lazy"
+                  alt=""
+                >
+                <img
+                  src="./images/promo/glassdoor.png"
+                  loading="lazy"
+                  alt=""
+                >
+              </div>
             </div>
           </a>
           <a href="https://www.glassdoor.com/Reviews/Preply-Reviews-E1620838.htm" class="promo__glassdoor promo__glassdoor--small">
-            <p>Read employees review on:</p>
-            <div>
-              <img src="./images/promo/glassdoor-logo-small.png" alt="">
-              <img src="./images/promo/glassdoor-name-small.png" alt="">
+            <svg
+              viewBox="0 0 204 156"
+              fill="currentColor"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <ellipse
+                cx="102"
+                cy="78"
+                rx="102"
+                ry="78"
+                fill-opacity="0.4"
+              ></ellipse>
+            </svg>
+            <div class="promo__glassdoor-inner promo__glassdoor-inner--small">
+              <p>Read employees review on:</p>
+              <div>
+                <img src="./images/promo/glassdoor-logo-small.png" alt="">
+                <img src="./images/promo/glassdoor-name-small.png" alt="">
+              </div>
             </div>
           </a>
         </div>
@@ -864,7 +892,7 @@
               <img src="./images/logo.png" alt="">
             </a>
           </div>
-          <div class="offset-3 offset-sm-2 col-5 offset-lg-7 col-lg-3">
+          <div class="offset-2 col-6 offset-lg-7 col-lg-3">
             <div class="footer__socials">
               <a
                 href="https://www.linkedin.com/company/preplycom/"
@@ -908,7 +936,7 @@
               </a>
               <a
                 href="https://www.youtube.com/channel/UCyDXMl-ru1F--NPCtO7aDig?feature=emb_ch_name_ex"
-                class="footer__sociall"
+                class="footer__sociall footer__sociall--youtube"
                 title="Our Youtube channel"
               >
                 <svg
