--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>Preply</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <link rel="shortcut icon" href="./favicon.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./favicon.png"
+      type="image/x-icon"
+    >
   </head>
   <body>
     <section class="promo">
