select update data

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <section class="language slogan slogan--green js-scroll js-background">
+    <section class="slogan slogan--green js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-7 col-lg-12">
@@ -84,7 +84,7 @@
             src="./images/slogan/slogan_1.svg"
             alt="power"
             loading="lazy"
-            class="slogan__img col-xl-5 col-lg-12 js-scroll__element scroll scroll__img"
+            class="slogan__img js-scroll__element scroll scroll__img col-xl-5 col-lg-12"
           >
         </div>
       </div>
@@ -363,7 +363,7 @@
       </div>
     </section>
 
-    <section class="work_with_us slogan slogan--red js-scroll js-background">
+    <section class="slogan slogan--red js-scroll js-background">
       <div class="container">
         <div class="row slogan__wrapper">
           <div class="slogan__text col-xl-5 col-lg-12">
@@ -393,16 +393,6 @@
             <div class="js-team js-group select">
               <div class="js-select select__basic-option" tabindex="0"></div>
               <ul class="js-options select__options">
-                <li class="js-option select__option">Engineering (0)</li>
-                <li class="js-option select__option">Data (0)</li>
-                <li class="js-option select__option">Design (0)</li>
-                <li class="js-option select__option">Copy & Localisation (0)</li>
-                <li class="js-option select__option">Customer Support (0)</li>
-                <li class="js-option select__option">Product (0)</li>
-                <li class="js-option select__option">Marketing (0)</li>
-                <li class="js-option select__option">Tutor Operation (0)</li>
-                <li class="js-option select__option">Leadership (0)</li>
-                <li class="js-option select__option">Finance/Legal (0)</li>
               </ul>
             </div>
 
