separate bootstrap from other classes

--- a/src/index.html
+++ b/src/index.html
@@ -389,22 +389,26 @@
     <section class="vacancies" id="vacancies">
       <div class="container js-scroll">
         <div class="row">
-          <div class="vacancies__wrapper col-10 offset-1 js-scroll__element scroll">
-            <div class="js-team js-group select">
-              <div class="js-select select__basic-option" tabindex="0"></div>
-              <ul class="js-options select__options">
-              </ul>
-            </div>
+          <div class="col-10 offset-1">
+            <div class="vacancies__wrapper js-scroll__element scroll">
+              <div class="js-team js-group select">
+                <div class="js-select select__basic-option" tabindex="0"></div>
+                <ul class="js-options select__options">
+                </ul>
+              </div>
 
-            <div class="js-location js-group select select--dark ">
-              <div class="js-select select__basic-option" tabindex="0"></div>
-              <ul class="js-options select__options">
-                <li class="js-option select__option" id="all">All locations</li>
-              </ul>
+              <div class="js-location js-group select select--dark ">
+                <div class="js-select select__basic-option" tabindex="0"></div>
+                <ul class="js-options select__options">
+                  <li class="js-option select__option" id="all">All locations</li>
+                </ul>
+              </div>
             </div>
           </div>
 
-          <table class="vacancies__list js-list offset-1 col-10 js-scroll__element scroll"></table>
+          <div class="offset-1 col-10">
+            <table class="vacancies__list js-list js-scroll__element scroll"></table>
+          </div>
         </div>
       </div>
     </section>
